--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
  </head>
  <body>
   <div class="container">
-   <div class="header">BLOGGOOD.RU</div>
+   <div class="header">Dev Plugin</div>
    <div class="sidebar">
     <p><a href="#">Главная</a></p>
-    <p><a href="#">Интервью</a></p>
-    <p><a href="#">Вопросы</a></p>
+    <p><a href="#">Магазин</a></p>
+    <p><a href="#">Файлы</a></p>
    </div>
    <div class="content">
-    <h2>История, которая меня впечатлила…</h2>
+    <h2>222222222222</h2>
 <p>
 Как часто вы задумываетесь над смыслом жизни?
 А находите ли вы ответ на вопрос «в чем смысл жизни»?
@@ -63,7 +63,7 @@
 маленькой девочки, я до глубины души была впечатлена!
 </p>
 </div>
-<div class="footer">&copy; Костаневич Степан - BlogGood.ru</div>
+<div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
 </div>
 </body>
 </html>
