--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
  body {
     font: 13pt Arial, Helvetica, sans-serif; /* Шрифт теста */
-    background: #e1dfb9; /* Цвет фона */
+    background: #000000; /* Цвет фона */
    }
    h2 {
     font-size: 18px; /* Размер шрифта в заголовке */
