--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
    .container {
     width: 600px; /* Ширина слоя */
     margin: 0 auto; /* Выравнивнить весь блок по центру */
-    background: #f0f0f0; /* Цвет фона левой колонки */
+    background: #c0c0c0; /* Цвет фона левой колонки */
    }
    .header {
     font-size: 38px; /* Размер текста в шапке */
     text-align: center; /* Выравнивание текст шапки по центру */
     padding: 5px; /* Отступы внутри блока шапки */
-    background: #8fa09b; /* Цвет фона шапки */
+    background: #808080; /* Цвет фона шапки */
     color: #fff; /* Цвет текста */
    }
    .sidebar {
@@ -35,7 +35,7 @@
     background: #fff; /* Цвет фона правого блока */
    }
    .footer {
-    background: #8fa09b; /* Цвет фона нижнего блока-подвала */
+    background: #808080; /* Цвет фона нижнего блока-подвала */
     color: #fff; /* Цвет текста подвала */
     padding: 5px; /* Отступы внутри блока */
     clear: left; /* Отменяем действие float */
