--- a/index.html
+++ b/index.html
@@ -1,66 +1,59 @@
 <html>
- <head>
-  <title>Dev Plugin</title>
-  <style>
- body {
-    font: 13pt Arial, Helvetica, sans-serif; /* Шрифт теста */
-    background: #000000; /* Цвет фона */
-   }
-   h2 {
-    font-size: 18px; /* Размер шрифта в заголовке */
-    color: #080808; /* Цвет заголовка */
-    margin-top: 0; /* Отступ сверху */
-   }
-   .container {
-    width: 600px; /* Ширина слоя */
-    margin: 0 auto; /* Выравнивнить весь блок по центру */
-    background: #c0c0c0; /* Цвет фона левой колонки */
-   }
-   .header {
-    font-size: 38px; /* Размер текста в шапке */
-    text-align: center; /* Выравнивание текст шапки по центру */
-    padding: 5px; /* Отступы внутри блока шапки */
-    background: #808080; /* Цвет фона шапки */
-    color: #fff; /* Цвет текста */
-   }
-   .sidebar {
-    margin-top: 10px;
-    width: 110px; /* Ширина блока */
-    padding: 0 10px; /* Отступы внутри левого блока */
-    float: left; /* Обтекание блока по правому краю */
-   }
-   .content {
-    margin-left: 130px; /* Отступ слева */
-    padding: 10px; /* Отступы внутри правого блока */
-    background: #fff; /* Цвет фона правого блока */
-   }
-   .footer {
-    background: #808080; /* Цвет фона нижнего блока-подвала */
-    color: #fff; /* Цвет текста подвала */
-    padding: 5px; /* Отступы внутри блока */
-    clear: left; /* Отменяем действие float */
-   }
-  </style>
- </head>
- <body>
-  <div class="container">
-   <div class="header">Dev Plugin</div>
-   <div class="sidebar">
-    <p><a href="#">Главная</a></p>
-    <p><a href="#">Магазин</a></p>
-    <p><a href="#">Файлы</a></p>
-   </div>
-   <div class="content">
-    <h2>222222222222</h2>
+<head>
+	<title>Dev Plugin</title>
+<style>
+	body {
+	font: 13pt Arial, Helvetica, sans-serif; /* Шрифт теста */
+	background: #000000; /* Цвет фона */
+	}
+	h2 {
+	font-size: 18px; /* Размер шрифта в заголовке */
+	color: #080808; /* Цвет заголовка */
+	margin-top: 0; /* Отступ сверху */
+	}
+	.container {
+	width: 600px; /* Ширина слоя */
+	margin: 0 auto; /* Выравнивнить весь блок по центру */
+	background: #c0c0c0; /* Цвет фона левой колонки */
+	}
+	.header {
+	font-size: 38px; /* Размер текста в шапке */
+	text-align: center; /* Выравнивание текст шапки по центру */
+	padding: 5px; /* Отступы внутри блока шапки */
+	background: #808080; /* Цвет фона шапки */
+	color: #fff; /* Цвет текста */
+	}
+	.sidebar {
+	margin-top: 10px;
+	width: 110px; /* Ширина блока */
+	padding: 0 10px; /* Отступы внутри левого блока */
+	float: left; /* Обтекание блока по правому краю */
+	}
+	.content {
+	margin-left: 130px; /* Отступ слева */
+	padding: 10px; /* Отступы внутри правого блока */
+	background: #fff; /* Цвет фона правого блока */
+	}
+	.footer {
+	background: #808080; /* Цвет фона нижнего блока-подвала */
+	color: #fff; /* Цвет текста подвала */
+	padding: 5px; /* Отступы внутри блока */
+	clear: left; /* Отменяем действие float */
+	}
+</style>
+</head>
+<body>
+	<div class="container">
+	<div class="header">Dev Plugin</div>
+	<div class="sidebar">
+	<p><a href="#">Главная</a></p>
+	<p><a href="#">Магазин</a></p>
+	<p><a href="#">Файлы</a></p>
+	</div>
+	<div class="content">
+	<h2>Информация</h2>
 <p>
-Как часто вы задумываетесь над смыслом жизни?
-А находите ли вы ответ на вопрос «в чем смысл жизни»?
-Что уже успели сделать за дарованные вам годы жизни?
-Вот еще один год подходит к концу… Довольны ли вы тем, как вы его прожили?
-Я очень часто огорчаюсь от того, что за свои годы ничего существенного
-не достигла. Нет в моей жизни такого поступка, которым действительно
-можно было бы гордиться. И когда я познакомилась с историей этой
-маленькой девочки, я до глубины души была впечатлена!
+	Сайт в разработке... с 15.04.2020
 </p>
 </div>
 <div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
