--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="header">Dev Plugin</div>
 	<div class="sidebar">
 	<p><a href="#">Главная</a></p>
-	<p><a href="#">Магазин</a></p>
+	<p><a href="shop">Магазин</a></p>
 	<p><a href="#">Файлы</a></p>
 	</div>
 	<div class="content">
