--- a/files/index.html
+++ b/files/index.html
@@ -51,9 +51,11 @@
 	<p><a href="#files">Файлы</a></p>
 	</div>
 	<div class="content">
-	<h2>Информация</h2>
+	<h2>Файлы</h2>
 <p>
-	Сайт в разработке... с 15.04.2020
+	<p>Duel 1vs1 		| https://
+	<p>Effect Jump 		| https://
+	<p>Effect Grenade	| https://
 </p>
 </div>
 <div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
