--- a/shop/index.html
+++ b/shop/index.html
@@ -47,8 +47,8 @@
 	<div class="header">Dev Plugin</div>
 	<div class="sidebar">
 	<p><a href="#">Главная</a></p>
-	<p><a href="#">Магазин</a></p>
-	<p><a href="#">Файлы</a></p>
+	<p><a href="#shop">Магазин</a></p>
+	<p><a href="#files">Файлы</a></p>
 	</div>
 	<div class="content">
 	<h2>Магазин</h2>
