--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 	<div class="container">
 	<div class="header">Dev Plugin</div>
 	<div class="sidebar">
-	<p><a href="#">Главная</a></p>
-	<p><a href="#shop">Магазин</a></p>
-	<p><a href="#files">Файлы</a></p>
+	<p><a href="">Главная</a></p>
+	<p><a href="shop">Магазин</a></p>
+	<p><a href="files">Файлы</a></p>
 	</div>
 	<div class="content">
 	<h2>Информация</h2>
