--- a/shop/index.html
+++ b/shop/index.html
@@ -46,7 +46,7 @@
 	<div class="container">
 	<div class="header">Dev Plugin</div>
 	<div class="sidebar">
-	<p><a href="">Главная</a></p>
+	<p><a href="https://devplugin.github.io/">Главная</a></p>
 	<p><a href="shop">Магазин</a></p>
 	<p><a href="files">Файлы</a></p>
 	</div>
