--- a/shop/index.html
+++ b/shop/index.html
@@ -47,18 +47,19 @@
 	<div class="header">Dev Plugin</div>
 	<div class="sidebar">
 	<p><a href="https://devplugin.github.io/">Главная</a></p>
-	<p><a href="shop">Магазин</a></p>
-	<p><a href="files">Файлы</a></p>
+	<p><a href="https://devplugin.github.io/shop/">Магазин</a></p>
+	<p><a href="https://devplugin.github.io/files/">Файлы</a></p>
 	</div>
 	<div class="content">
 	<h2>Магазин</h2>
 <p>
-	Готовые сервера:
-		Public = 300
-		ZombieMod = 500
-	Приватные плагины:
-		WC:Source = 1000
-		RPG Mod = 700
+	<p>Готовые сервера:
+		<p>Public = 300
+		<p>ZombieMod = 500
+		<p>
+	<p>Приватные плагины:
+		<p>WC:Source = 1000
+		<p>RPG Mod = 700
 </p>
 </div>
 <div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
