--- a/shop/index.html
+++ b/shop/index.html
@@ -54,12 +54,13 @@
 	<h2>Магазин</h2>
 <p>
 	<p>Готовые сервера:
-		<p>Public = 300
-		<p>ZombieMod = 500
-		<p>
+		<p>Мы не продает готовые сервера, делаем только под заказ по ТЗ.
 	<p>Приватные плагины:
-		<p>WC:Source = 1000
-		<p>RPG Mod = 700
+		<p>WC:Source (private) = 1500
+		<p>NC RPG = 1500
+		<p>Fortnite Dancing = 1000
+		<p>SHOP (3 валюты) = 600
+		<p>MultiGame Mod = 500
 </p>
 </div>
 <div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
