--- a/files/index.html
+++ b/files/index.html
@@ -4,7 +4,7 @@
 <style>
 	body {
 	font: 13pt Arial, Helvetica, sans-serif; /* Шрифт теста */
-	background: #000000; /* Цвет фона */
+	background: url(background.jpg); #000000; /* Цвет фона */
 	}
 	h2 {
 	font-size: 18px; /* Размер шрифта в заголовке */
@@ -49,6 +49,7 @@
 	<p><a href="https://devplugin.github.io/">Главная</a></p>
 	<p><a href="https://devplugin.github.io/shop/">Магазин</a></p>
 	<p><a href="https://devplugin.github.io/files/">Файлы</a></p>
+	<p><a href="https://devplugin.github.io/comment/">Отзывы</a></p>
 	</div>
 	<div class="content">
 	<h2>Файлы</h2>
