--- a/comment/index.html
+++ b/comment/index.html
@@ -56,7 +56,7 @@
 <p>
 	В коментариях можете оставить свой отзыв.
 </p>
-<form action="{% url 'articles:leave_comment' article.id %}" method="POST">
+<form action="{% url 'articles:https://devplugin.github.io/comment/' article.id %}" method="POST">
 	<input type="text" required placeholder="Ваше имя" name="name"><br>
 	<textarea name="text" required="" placeholder="Текст коментария" cols="30" rows="10"></textarea><br>
 	<button type="submit">Оставить коментарий</button>
