--- a/comment/index.html
+++ b/comment/index.html
@@ -44,6 +44,20 @@
 <link rel="stylesheet" href="ecomment/ecomment.css" type="text/css" media="all">
 <script type="text/javascript" src="ecomment/ecomment.js"></script>
 </head>
+	<title>Пробное комментирование</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<script language="JavaScript" src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script language="JavaScript" src="/ecomment.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/ecomment.css" type="text/css" />
+	<style>
+		.wrapper{
+			width: 600px;
+			margin:0 auto;
+		}
+		p,ul{
+			margin-bottom: 20px;
+		}
+	</style>
 <body>
 	<div class="container">
 	<div class="header">Dev Plugin</div>
@@ -58,6 +72,8 @@
 <p>
 	В коментариях можете оставить свой отзыв.
 </p>
+<div class="wrapper"></div>
+<script>$('.wrapper').ecomment();</script>
 <div class="ecomment_wrapper" rel="http://mysite.com/feedback.html"></div>
 <div class="ecomment_wrapper" rel="http://mysite.com/faq.html"></div>
 <div class="ecomment_wrapper" rel="some_ref_one"></div>
