--- a/comment/index.html
+++ b/comment/index.html
@@ -41,23 +41,7 @@
 	clear: left; /* Отменяем действие float */
 	}
 </style>
-<link rel="stylesheet" href="ecomment/ecomment.css" type="text/css" media="all">
-<script type="text/javascript" src="ecomment/ecomment.js"></script>
 </head>
-	<title>Пробное комментирование</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script language="JavaScript" src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<script language="JavaScript" src="/ecomment.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="/ecomment.css" type="text/css" />
-	<style>
-		.wrapper{
-			width: 600px;
-			margin:0 auto;
-		}
-		p,ul{
-			margin-bottom: 20px;
-		}
-	</style>
 <body>
 	<div class="container">
 	<div class="header">Dev Plugin</div>
@@ -72,20 +56,11 @@
 <p>
 	В коментариях можете оставить свой отзыв.
 </p>
-<div class="wrapper"></div>
-<script>$('.wrapper').ecomment();</script>
-<div class="ecomment_wrapper" rel="http://mysite.com/feedback.html"></div>
-<div class="ecomment_wrapper" rel="http://mysite.com/faq.html"></div>
-<div class="ecomment_wrapper" rel="some_ref_one"></div>
-	<div class="ecomment_wrapper" rel="some_ref_two"></div>
-	<script>
-		// многократное подключение скрипта на странице
-		$('.ecomment_wrapper').each(function(){
-			$(this).ecomment({
-				ref: $(this).attr('rel')
-			});
-		});
-	</script>
+<form action="{% url 'articles:leave_comment' article.id %}" method="POST">
+	<input type="text" required placeholder="Ваше имя" name="name"><br>
+	<textarea name="text" required="" placeholder="Текст коментария" cols="30" rows="10"></textarea><br>
+	<button type="submit">Оставить коментарий</button>
+</form>
 </div>
 <div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
 </div>
