--- a/files/index.html
+++ b/files/index.html
@@ -57,6 +57,7 @@
 	<p>Duel 1vs1 		| https://
 	<p>Effect Jump 		| https://
 	<p>Effect Grenade	| https://
+	<p>Lightning Death	| https://github.com/devplugin/LightningDeath
 </p>
 </div>
 <div class="footer">&copy; Связь в группе https://vk.com/one7hop</div>
